...
                  size: 24,
                ),
              ),
            ),
            Expanded(
              child: TextField(
                key: const Key('chat_message_input'),
                controller: controller,
                focusNode: focusNode,
                textInputAction: TextInputAction.send,
                onTap: () {
                  if (showEmoji) onToggleEmoji();
                },
...
